ligolang/src/test/contracts/negative/switch_jsligo/break_outside_case4.jsligo
let fn = (n : int) : string => {
    let output = "Hello";
    switch (n) {
        case 1: 
            {
                output = output + "World";
                break;
            };
        case 2: 
            output = output + "World";
            break;
    };
    return output;
};